# aurora-ts

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
notebooks/: 00_exploration.ipynb  01_baselines.ipynb
src/aurora_ts/data/: loaders.py  splits.py  transforms.py
src/aurora_ts/features/: build_features.py  targets.py
tests/: test_baselines.py  test_evaluation.py  test_features.py  test_leakage.py  test_loaders.py  test_splits.py  test_targets.py  test_train_end_to_end.py
